Closed Bug 313018 Opened 20 years ago Closed 20 years ago

select1 size incorrect when populate from itemset

Categories

(Core Graveyard :: XForms, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: nick, Assigned: smaug)

References

Details

(Keywords: fixed1.8)

Attachments

(5 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.8) Gecko/20050511 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.8) Gecko/20050511 select1 does not resize to contain text when populated from itemset. It does when populate by a series of item tags. Reproducible: Always
Assignee: aaronr → smaug
Attachment #200092 - Attachment description: select1 populate by itemset → select1 populate by item
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #200130 - Flags: review?(doronr)
Comment on attachment 200130 [details] [diff] [review] proposed patch The C++ part of the itemset is nowadays nsXFormsDelegate, so the UI part can now implement nsIXFormsUIWidget and get all the fixes related to PostRefresh.
Attachment #200130 - Flags: review?(aaronr)
Blocks: 312301
Attachment #200130 - Flags: review?(doronr) → review+
Comment on attachment 200130 [details] [diff] [review] proposed patch I don't have a problem with the patch, but I don't see any difference with the attached testcases before or after I compile in the patch. Is there a more obvious testcase?
Attachment #200130 - Flags: review?(aaronr) → review+
(In reply to comment #5) > (From update of attachment 200130 [details] [diff] [review] [edit]) > I don't have a problem with the patch, but I don't see any difference with the > attached testcases before or after I compile in the patch. Is there a more > obvious testcase? > Hmm, the patch should fix the problem with the second test case.
(In reply to comment #6) > (In reply to comment #5) > > (From update of attachment 200130 [details] [diff] [review] [edit] [edit]) > Hmm, the patch should fix the problem with the second test case. And this fixes the size problem in bug 312301.
checked in to trunk
Whiteboard: xf-to-branch
No longer blocks: 312301
*** Bug 312301 has been marked as a duplicate of this bug. ***
Hmm, on branch, this patch doesn't seem to fix the issue for me.
(In reply to comment #10) > Hmm, on branch, this patch doesn't seem to fix the issue for me. Nope, doesn't work on branch for me either.
(In reply to comment #10) > Hmm, on branch, this patch doesn't seem to fix the issue for me. > Strange. I'll look at it tomorrow. (Way too late atm.) Does the patch still fix Bug 312301?
I have no idea why the select->Refresh(); was commented out o_O
Attachment #200636 - Flags: review?(doronr)
Attachment #200636 - Flags: review?(aaronr)
Attachment #200636 - Flags: review?(doronr) → review+
Attachment #200636 - Flags: review?(aaronr) → review+
checked into branch
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch → fixed1.8
Keywords: fixed1.8
Whiteboard: fixed1.8
select1 size is incorrect when a default value is given.
(In reply to comment #15) > Created an attachment (id=219066) [edit] > Testcase with default value > > select1 size is incorrect when a default value is given. > This works fine on the trunk. Fixed by bug 333045 which didn't make it into 0.5. Will be in 0.6.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: