NPOTDB XForms bug 313018 - select1 size incorrect when populated from an itemset. patch by smaug, r=me,aaronr